# StarcraftProjectAdvpt

./: CMakeLists.txt  Makefile  README.md  StarcraftProjectAdvpt.sln  StarcraftProjectAdvpt.vcxproj  StarcraftProjectAdvpt.vcxproj.filters  main.cpp  src2pdf  test.txt
buildlists/: protoss1.txt  protoss2.txt  protoss3.txt  protossHard.txt  terran1.txt  terran2.txt  terran3.txt  terranHard.txt  zerg1.txt  zerg2.txt  zerg3.txt  zerg4.txt
data/: README.txt  StartingConfiguration.txt
data/Protoss/: buildings.txt  units.txt
data/Terran/: buildings.txt  units.txt
data/Zerg/: buildings.txt  units.txt
include/: BuildList.h  BuildListGenerator.h  BuildListOptimizer.h  Building.h  Building.h.orig  BuildlistOptimizer.h  DataReader.h  Debug.h  Energizer.h  Energizer.h.orig  Entity.h  FitnessPolicy.h  GameState.h  GameStateUpdate.h  InitTechTree.hpp  RacePolicy.h  ResourceManager.h  Simulation.h  Simulation.h.autosave  StartingConfiguration.h  Technology.h  TechnologyList.h  TechnologyManager.h  TemplateInstantiations.h  Unit.h  Worker.h  building.h  entity.h  game_state.h  ressource_manager.h  simulation.h  techTreePolicy.h  techTreePolicy.hh  technology_manager.h  timer.h  worker.h
src/: BuildListGenerator.cpp  BuildListOptimizer.cpp  BuildListOptimizer.cpp.orig  Building.cpp  CMakeLists.txt  DataReader.cpp  Debug.cpp  GameState.cpp  ResourceManager.cpp  Simulation.cpp  Simulation.cpp.orig  Technology.cpp  TechnologyList.cpp  TechnologyManager.cpp  Unit.cpp  Worker.cpp  adpvt  main.cpp  main.cpp.orig  testTechList.cpp
